added Resource Involvement Experiment + some fixes
* preprocessing for document graphs
* fixed tests